--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <header class="main-header no-cover">
     <nav class="main-nav overlay clearfix">
             
-        <a class="subscribe-button icon-feed" href="/rss.xml">Subscribe</a>
+        <a class="subscribe-button icon-feed" href="/hadoopnrrss.xml">Subscribe</a>
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
             <h1 class="page-title">Your New Jekyll Site</h1>
             <h2 class="page-description">
                  Blogging about stuffs. 
-                 <a href='/about.html'> About me </a> 
+                 <a href='/hadoopnrabout.html'> About me </a> 
             </h2>
         </div>
     </div>
@@ -102,7 +102,7 @@ To add new posts, simply add a file in the <code>_posts</code> directory that fo
 
     <footer class="site-footer clearfix">
       <section class="copyright">
-        <a href="/">Your New Jekyll Site</a> &copy; 
+        <a href="/hadoopnr">Your New Jekyll Site</a> &copy; 
                &bull; All rights reserved.
       </section>
       <section class="poweredby">Made with Jekyll using 
